--- a/Gradient_Decent_Matrix_for_Linear_and_polynomial_Regression.ipynb
+++ b/Gradient_Decent_Matrix_for_Linear_and_polynomial_Regression.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mnazizi/Ai/blob/main/Gradient_Decent_Matrix_for_Linear_and_polynomial_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mnazizi/Gradeint_Decsent_For_Linear_Regression/blob/main/Gradient_Decent_Matrix_for_Linear_and_polynomial_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,7 +17,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "X_train = np.random.normal(0,100,(801 , 6))\n",
+        "X_train = np.random.normal(0,100,(100001 , 6))\n",
         "X_train[: , 0]= 1\n",
         "X_test  = np.random.normal(0,100,(201 , 6))\n",
         "X_test[: , 0]= 1\n",
@@ -32,20 +32,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mDutAqUlLJrK",
-        "outputId": "2d8aa791-b703-461d-98af-9b0eeed54cc4"
+        "outputId": "3e846bf5-b618-4757-cae8-72b34c48cfd0"
       },
-      "execution_count": 84,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.36057556]\n",
-            " [-1.20476056]\n",
-            " [-6.04026674]\n",
-            " [-0.23124348]\n",
-            " [ 1.12021623]\n",
-            " [ 1.31367595]]\n"
+            "[[-3.29597523]\n",
+            " [ 1.14286441]\n",
+            " [ 0.61793433]\n",
+            " [ 0.93677624]\n",
+            " [ 2.17278712]\n",
+            " [ 1.75039371]]\n"
           ]
         }
       ]
@@ -53,6 +53,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from IPython.display import clear_output\n",
         "def Calculate_Gradient(W , X , Y):\n",
         "  Y_pred = np.dot(X, W)\n",
         "  Err = np.sum((Y - Y_pred)**2)\n",
@@ -62,7 +63,7 @@
         "W = np.random.normal(0,2,(d , 1))\n",
         "\n",
         "\n",
-        "epoch = 10000\n",
+        "epoch = 50\n",
         "learning_rate = 0.00001\n",
         "\n",
         "for i in range(epoch):\n",
@@ -77,16 +78,32 @@
         "  W = W - learning_rate * (DW/n)\n",
         "  Loss_train = ERR/n\n",
         "  Loss_test = np.sum((Y_test - np.dot(X_test, W))**2)/n\n",
+        "  learning_rate = learning_rate * 0.99\n",
+        "  clear_output(wait=True)\n",
+        "  print(\"epoch: \" , i , \"Loss Train: \" , Loss_train)\n",
+        "\n",
         "\n",
         "print(\"epoch: \" , i , \"Loss: \" , Loss_train)\n",
         "print(\"epoch: \" , i , \"Loss: \" , Loss_test)\n",
         "print(\"Weight: \" , W)\n"
       ],
       "metadata": {
-        "id": "0WEVJYbE9Szl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0WEVJYbE9Szl",
+        "outputId": "1b54f6ed-ce2f-4113-e1e1-61b37f3feabc"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "epoch:  9 Loss Train:  5086.633044360719\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -98,24 +115,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0u_PQfb0KP0n",
-        "outputId": "7cff4a4a-9044-46e1-9f3c-8ef7e346e704"
+        "outputId": "c19ca28b-0d23-43fe-c930-f46c0660bbf1"
       },
-      "execution_count": 86,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0.36057556],\n",
-              "       [-1.20476056],\n",
-              "       [-6.04026674],\n",
-              "       [-0.23124348],\n",
-              "       [ 1.12021623],\n",
-              "       [ 1.31367595]])"
+              "array([[-3.29597523],\n",
+              "       [ 1.14286441],\n",
+              "       [ 0.61793433],\n",
+              "       [ 0.93677624],\n",
+              "       [ 2.17278712],\n",
+              "       [ 1.75039371]])"
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 28
         }
       ]
     }
@@ -123,7 +140,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOie2KhdPCwhyWd1SQPguk4",
+      "authorship_tag": "ABX9TyNTwi0sjMMyl1kfc9dFNxaf",
       "include_colab_link": true
     },
     "kernelspec": {
