--- a/Gradient_Decent_Matrix_for_Linear_and_polynomial_Regression.ipynb
+++ b/Gradient_Decent_Matrix_for_Linear_and_polynomial_Regression.ipynb
@@ -17,7 +17,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "X_train = np.random.normal(0,100,(100001 , 6))\n",
+        "X_train = np.random.normal(0,100,(100000 , 6))\n",
         "X_train[: , 0]= 1\n",
         "X_test  = np.random.normal(0,100,(201 , 6))\n",
         "X_test[: , 0]= 1\n",
@@ -32,20 +32,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mDutAqUlLJrK",
-        "outputId": "3e846bf5-b618-4757-cae8-72b34c48cfd0"
+        "outputId": "77cce244-7185-4322-f1e9-846d3f7dc764"
       },
-      "execution_count": 24,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-3.29597523]\n",
-            " [ 1.14286441]\n",
-            " [ 0.61793433]\n",
-            " [ 0.93677624]\n",
-            " [ 2.17278712]\n",
-            " [ 1.75039371]]\n"
+            "[[-3.63669481]\n",
+            " [ 0.81332046]\n",
+            " [-0.83709389]\n",
+            " [-0.12903552]\n",
+            " [-1.21494864]\n",
+            " [ 1.04433322]]\n"
           ]
         }
       ]
@@ -60,31 +60,32 @@
         "  dW = -2 *np.dot( X.T , (Y - Y_pred))\n",
         "  return  dW , Err\n",
         "\n",
-        "W = np.random.normal(0,2,(d , 1))\n",
+        "W = np.zeros((d , 1))\n",
         "\n",
         "\n",
-        "epoch = 50\n",
-        "learning_rate = 0.00001\n",
-        "\n",
+        "epoch = 20\n",
+        "learning_rate = 0.0001\n",
+        "batch = 100\n",
         "for i in range(epoch):\n",
-        "  dW = np.zeros(W.shape)\n",
-        "  DW = np.zeros(W.shape)\n",
         "  ERR = 0\n",
-        "  Err = 0\n",
-        "  for j in range(n):\n",
-        "    dW , Err = Calculate_Gradient(W , X_train[j:j+1] , Y_train[j:j+1])\n",
-        "    DW = DW + dW\n",
-        "    ERR = ERR + Err\n",
-        "  W = W - learning_rate * (DW/n)\n",
+        "  for k in range(batch):\n",
+        "    dW = np.zeros(W.shape)\n",
+        "    DW = np.zeros(W.shape)\n",
+        "    for j in range(int(n/batch)):\n",
+        "      l = int(n/batch)\n",
+        "      dW , Err = Calculate_Gradient(W , X_train[(j+k*(l)):(j+k*(l))+1] , Y_train[(j+k*(l)):(j+k*(l))+1])\n",
+        "      DW = DW + dW\n",
+        "      ERR = ERR + Err\n",
+        "    W = W - learning_rate * (DW/n)\n",
+        "    learning_rate = learning_rate * 0.995\n",
         "  Loss_train = ERR/n\n",
         "  Loss_test = np.sum((Y_test - np.dot(X_test, W))**2)/n\n",
-        "  learning_rate = learning_rate * 0.99\n",
         "  clear_output(wait=True)\n",
         "  print(\"epoch: \" , i , \"Loss Train: \" , Loss_train)\n",
         "\n",
         "\n",
-        "print(\"epoch: \" , i , \"Loss: \" , Loss_train)\n",
-        "print(\"epoch: \" , i , \"Loss: \" , Loss_test)\n",
+        "print(\"epoch: \" , i , \"Loss Train: \" , Loss_train)\n",
+        "print(\"epoch: \" , i , \"Loss Test: \" , Loss_test)\n",
         "print(\"Weight: \" , W)\n"
       ],
       "metadata": {
@@ -92,15 +93,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0WEVJYbE9Szl",
-        "outputId": "1b54f6ed-ce2f-4113-e1e1-61b37f3feabc"
+        "outputId": "4b5563cd-164a-4214-be67-9ddffb3bf48e"
       },
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "epoch:  9 Loss Train:  5086.633044360719\n"
+            "epoch:  19 Loss Train:  25.759246052477323\n",
+            "epoch:  19 Loss Train:  25.759246052477323\n",
+            "epoch:  19 Loss Test:  0.04630271332595893\n",
+            "Weight:  [[-0.00150394]\n",
+            " [ 0.79878789]\n",
+            " [-0.82228773]\n",
+            " [-0.12660452]\n",
+            " [-1.19324364]\n",
+            " [ 1.02584056]]\n"
           ]
         }
       ]
@@ -115,24 +124,48 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0u_PQfb0KP0n",
-        "outputId": "c19ca28b-0d23-43fe-c930-f46c0660bbf1"
+        "outputId": "344e2dee-a985-4b39-d3b8-63ee8e088f5f"
       },
-      "execution_count": 28,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[-3.29597523],\n",
-              "       [ 1.14286441],\n",
-              "       [ 0.61793433],\n",
-              "       [ 0.93677624],\n",
-              "       [ 2.17278712],\n",
-              "       [ 1.75039371]])"
+              "array([[-3.63669481],\n",
+              "       [ 0.81332046],\n",
+              "       [-0.83709389],\n",
+              "       [-0.12903552],\n",
+              "       [-1.21494864],\n",
+              "       [ 1.04433322]])"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v = range(10)\n",
+        "print(v[9])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ssCY16VHWdMK",
+        "outputId": "2bfc214e-68e4-4536-ad96-bd2f51c073db"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
         }
       ]
     }
@@ -140,7 +173,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTwi0sjMMyl1kfc9dFNxaf",
+      "authorship_tag": "ABX9TyMIJRJUUGZuJRXXtNA4UK29",
       "include_colab_link": true
     },
     "kernelspec": {
